# reposweep

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/reposweep-cli/: Cargo.toml
crates/reposweep-cli/src/: completions.rs  doctor.rs  main.rs  uninstall.rs  upgrade.rs
crates/reposweep-core/: Cargo.toml
crates/reposweep-core/src/: config.rs  domain.rs  error.rs  lib.rs  rules.rs
crates/reposweep-core/src/infrastructure/: delete.rs  mod.rs  walker.rs
crates/reposweep-core/src/services/: delete.rs  scan.rs
crates/reposweep-core/tests/: scan_integration.rs
crates/reposweep-tui/: Cargo.toml
crates/reposweep-tui/src/: app.rs  state.rs  storage.rs  ui.rs
crates/shatter-cli/: Cargo.toml
crates/shatter-cli/src/: main.rs
crates/shatter-core/: Cargo.toml
crates/shatter-core/src/: config.rs  domain.rs  error.rs  lib.rs
crates/shatter-core/src/infrastructure/: delete.rs  walker.rs
crates/shatter-core/src/services/: mod.rs
crates/shatter-core/tests/: scan_integration.rs
crates/shatter-tui/: Cargo.toml
crates/shatter-tui/src/: app.rs  lib.rs  state.rs  storage.rs  ui.rs
landing-page/: .htaccess  index.html  main.js  robots.txt  sitemap.xml  style.css
landing-page/docs/: index.html
landing-page/privacy/: index.html
redirect-page/: index.html
