[workspace]
members = [
    "crates/reposweep-core",
    "crates/reposweep-tui",
    "crates/reposweep-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.4"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.60"
crossterm = "0.29.0"
directories = "6.0.0"
flate2 = "1.1.4"
indicatif = "0.18.4"
miette = { version = "7.6.0", features = ["fancy"] }
ratatui = "0.30.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
self-replace = "1.5.0"
tar = "0.4.44"
tempfile = "3.23.0"
thiserror = "2.0.18"
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
trash = "5.2.5"
walkdir = "2.5.0"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
