[package]
name = "reposweep"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Developer repo cleanup tool with a Ratatui interface and reusable Rust engine"

[dependencies]
clap.workspace = true
miette.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reposweep-core = { path = "../reposweep-core" }
reposweep-tui = { path = "../reposweep-tui" }
