[package]
name = "reposweep"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Developer repo cleanup tool with a Ratatui interface and reusable Rust engine"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
flate2.workspace = true
indicatif.workspace = true
miette.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
self-replace.workspace = true
tar.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
zip.workspace = true
reposweep-core = { path = "../reposweep-core" }
reposweep-tui = { path = "../reposweep-tui" }
