[package]
name = "reposweep-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
reposweep-core = { path = "../reposweep-core" }

[dev-dependencies]
tempfile.workspace = true
