[package]
name = "shatter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Developer repo cleanup tool with a Ratatui interface and reusable Rust engine"

[dependencies]
clap.workspace = true
miette.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shatter-core = { path = "../shatter-core" }
shatter-tui = { path = "../shatter-tui" }
