[package]
name = "shatter-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
directories.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
trash.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
