[package]
name = "shatter-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
shatter-core = { path = "../shatter-core" }

[dev-dependencies]
tempfile.workspace = true
